--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     <p> <i class="fa-solid fa-paper-plane"></i> sk9200919@gmail.com</p>
                     <p> <i class="fa-solid fa-square-phone"></i> 03089851544</p>
                     <div class="social-icon">
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/share/1S4RLi36js/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://www.instagram.com/shahbaz__khan_02?igsh=Nmlucm9pZnp5YXcz"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/shahbaz-khan-197614349?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/my-cv.pdf" class="btn btn2" >Download CV</a>
                 </div>
